--- a/app/views/fields/image/_form.html.erb
+++ b/app/views/fields/image/_form.html.erb
@@ -19,5 +19,5 @@ By default, the input is a text field for the image's URL.
   <%= f.label field.attribute %>
 </div>
 <div class="field-unit__field">
-  <%= f.text_field field.attribute %>
+  <%= f.file_field field.attribute %>
 </div>
